--- a/Utilidades/Utilidades.csproj
+++ b/Utilidades/Utilidades.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Encryptar.cs" />
     <Compile Include="GlobalClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validaciones.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
