--- a/CapaDeDatos/CapaDeDatos.csproj
+++ b/CapaDeDatos/CapaDeDatos.csproj
@@ -79,12 +79,14 @@
     <Compile Include="Models\Persona.cs" />
     <Compile Include="Models\Rol.cs" />
     <Compile Include="Models\Usuario.cs" />
+    <Compile Include="Models\Venta.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Totales.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
