--- a/CapaDeDatos/CapaDeDatos.csproj
+++ b/CapaDeDatos/CapaDeDatos.csproj
@@ -68,6 +68,7 @@
     <Compile Include="CRUDS\personaDAO.cs" />
     <Compile Include="CRUDS\rolDAO.cs" />
     <Compile Include="CRUDS\usuarioDAO.cs" />
+    <Compile Include="CRUDS\ventaDAO.cs" />
     <Compile Include="IDetalleIngresoDetails.cs" />
     <Compile Include="IDetalleIngresoHeader.cs" />
     <Compile Include="login.cs" />
@@ -75,6 +76,7 @@
     <Compile Include="Models\Articulo.cs" />
     <Compile Include="Models\Categoria.cs" />
     <Compile Include="Models\DetalleIngreso.cs" />
+    <Compile Include="Models\DetalleVenta.cs" />
     <Compile Include="Models\Ingreso.cs" />
     <Compile Include="Models\Persona.cs" />
     <Compile Include="Models\Rol.cs" />
