--- a/CapaNegocio/CapaNegocio.csproj
+++ b/CapaNegocio/CapaNegocio.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="DTO\ArticuloDTO.cs" />
     <Compile Include="DTO\CategoriaDTO.cs" />
+    <Compile Include="DTO\EmpresaDTO.cs" />
     <Compile Include="DTO\IngresoDTO.cs" />
     <Compile Include="DTO\PersonaDTO.cs" />
     <Compile Include="DTO\RolDTO.cs" />
